color_picker.cc fix float-to-bool conversion warning

New versions of Clang were warning (which we treat as an error)
on this code:

../../content/browser/devtools/protocol/color_picker.cc:184:7:
error: implicit conversion from 'const float' to 'bool' changes
value from 0 to false [-Werror,-Wfloat-bool-constant-conversion]
  if (kHotspotRadius) {
      ~~  ^~~~~~~~~~~~~~

BUG=605818
TBR=dgozman

Review URL: https://codereview.chromium.org/1906333002

Cr-Commit-Position: refs/heads/master@{#389016}

Former-commit-id: 24fec3b129239e5812f527033baeb1c7b27e8a48